	 option, tidy up --with-disk-prefix help and rename --with-joystick to
	 --without-joystick in help (Stuart).
20070906 ui/win32/{menu_data.c,menu_data.h,menu_data.rc,win32internals.h}:
	 update menu items, clean up #includes, move handle_menu() prototype
	 and remove redundant menu_machine_pokefinder() prototype (Stuart).
20070906 compat/win32/osname.c: fix up warnings (Stuart).
20070908 ui/win32/{options-header.pl,options-resource.pl,options.pl}: add code
	 to generate options dialogs for Win32 UI (Stuart).
20070908 ui/win32/menu_data.rc: fix compilation without libpng (Stuart).
20070908 ui/gtk/fileselector.c: give the save dialog its save button back.
20070909 settings.pl: fix up a couple of memory leaks.
20070910 machines/specplus3.c: fix another memory leak.
20070919 z80/z80.pl: various non-MREQ contention fixes.
20070928 disk/wd1770.c: fix seek/restore command decoding (Stuart).
20070928 event.[ch]: add 'user_data' event field (Gergely and Stuart).
20070928 disk/{Makefile.am,crc.[ch],disk.[ch],fdd.[ch],plusd.[ch],wd1770.[ch]},
	 event.[ch]: new WD17xx emulation, with support for non-uniform sector
	 layouts (Gergely Szasz).
20070928 Makefile.am,configure.in,event.c,fuse.c,menu.c,menu_data.dat,
	 periph.[ch],printer.c,tape.c,ui/{gtk/gtkui.c,options.dat,
	 win32/{menu_data.[ch],menu_data.rc,win32ui.c}},ui.c,utils.c,
	 widget/menu.c,z80/{coretest.c,z80_ops.c}: make libdisk.a no longer
	 depend on libdsk (Stuart).
20071003 disk/wd1770.c: small tidyups.
20071003 sound.c: reindent (Stuart Brady).
20071005 disk/{Makefile.am,plusd.[ch],wd_fdc.[ch]},event.[ch]: rename
	 wd1770.[ch] to wd_fdc.[ch], and s/wd1770/wd_fdc/ (Stuart).
20071006 configure.in: amiga should be detected as amigaos instead of just
         amiga (Thanks, Chris Young) (Fred).
20070807 roms/{plus3e-0.rom,roms/plus3e-1.rom,roms/plus3e-2.rom}: update to
         v1.31 of the +3e ROMs (feature request #1808657) (Fred).
20070816 disk/wd_fdc.h,event.c,profile.c,sound/alsasound.c: warnings removal.