@@ -28,33 +28,16 @@
 
 #include <config.h>
 
-#include <errno.h>
-#include <stdlib.h>
-#include <stdio.h>
-#include <fcntl.h>
-#include <unistd.h>
-#include <string.h>
-#ifdef HAVE_STRINGS_H
-#include <strings.h>            /* Needed for strncasecmp() on QNX6 */
-#endif                          /* #ifdef HAVE_STRINGS_H */
-#include <limits.h>
-#include <sys/stat.h>
-
 #include <libspectrum.h>
 
 #include "compat.h"
-#include "disk.h"
-#include "event.h"
-#include "fdd.h"
 #include "machine.h"
 #include "module.h"
 #include "plusd.h"
 #include "printer.h"
 #include "settings.h"
 #include "ui/ui.h"
-#include "utils.h"
 #include "wd_fdc.h"
-#include "z80/z80.h"
 
 int plusd_available = 0;
 int plusd_active = 0;
