@@ -2152,3 +2152,5 @@
 20070807 roms/{plus3e-0.rom,roms/plus3e-1.rom,roms/plus3e-2.rom}: update to
          v1.31 of the +3e ROMs (feature request #1808657) (Fred).
 20070816 disk/wd_fdc.h,event.c,profile.c,sound/alsasound.c: warnings removal.
+20070816 disk/{crc.c,disk.c,fdd.c,plusd.c,wd_fdc.c}: remove unnecessary
+	 header files.
